--- a/docs/concepts/python-sdk.mdx
+++ b/docs/concepts/python-sdk.mdx
@@ -10,7 +10,7 @@ tags:
   - sdk
 ---
 
-**How to the Resonate Python SDK works.**
+**How does the Resonate Python SDK works.**
 
 The Resonate Python SDK is designed to offer developers an idiomatic Python experience, while providing the necessary abstractions to build Distributed Async Await applications.
 Central to the SDK is the concept of the [Application Node](/concepts/application-node), which functions through an Event Loop.
