Python Batching docs (#81)
* in progress batching example

* python batching info

* Update docs/concepts/python-sdk.mdx

* Update docs/concepts/python-sdk.mdx

* fix snippets

--- a/docs/concepts/python-sdk.mdx
+++ b/docs/concepts/python-sdk.mdx
@@ -1,6 +1,6 @@
 ---
 id: python-sdk
-title: How the Resonate Python SDK works
+title: Resonate Python SDK
 sidebar_label: Python SDK
 description: Learn how the Resonate Python SDK works
 last_update:
@@ -9,6 +9,8 @@ tags:
   - python
   - sdk
 ---
+
+**How does the Resonate Python SDK work.**
 
 The Resonate Python SDK is designed to offer developers an idiomatic Python experience, while providing the necessary abstractions to build Distributed Async Await applications.
 Central to the SDK is the concept of the [Application Node](/concepts/application-node), which functions through an Event Loop.
