add capitalization changes

--- a/docs/operate/cli-reference/commands/tasks.mdx
+++ b/docs/operate/cli-reference/commands/tasks.mdx
@@ -8,7 +8,7 @@ tags:
   - tasks
 ---
 
-The `tasks` command enables you to interact with the tasks framework by simulating the behavior of an application node.
+The `tasks` command enables you to interact with the Task Framework by simulating the behavior of an Application Node.
 
 ```shell
 resonate tasks <sub-command> <args> [flags]
@@ -16,7 +16,7 @@ resonate tasks <sub-command> <args> [flags]
 
 ## complete
 
-Complete a task.
+Complete a Task.
 
 ```shell
 resonate tasks complete <id> [flags]
@@ -30,7 +30,7 @@ Flags:
 
 ## claim
 
-Claim one or more tasks associated with the given ID.
+Claim one or more Tasks associated with the given ID.
 
 ```shell
 resonate tasks claim <id> [flags]
@@ -42,7 +42,7 @@ Flags:
 
 ## heartbeat
 
-Send heartbeat signals for tasks associated with the given process ID.
+Send Heartbeat signals for Tasks associated with the given process ID.
 
 ```shell
 resonate tasks heartbeat <id> [flags]
