--- a/docs/operate/cli-reference/flags.mdx
+++ b/docs/operate/cli-reference/flags.mdx
@@ -521,7 +521,8 @@ Used in:
 
 ### --counter
 
-The counter is a feature that keeps track of the number of tasks. It increments each time a new task is added and decrements when a task is completed or removed.
+The counter is a feature that keeps track of the number of Tasks.
+It increments each time a new Task is added and decrements when a Task is completed or removed.
 
 Used in:
 
