--- a/docs/operate/cli-reference/commands/tasks.mdx
+++ b/docs/operate/cli-reference/commands/tasks.mdx
@@ -2,7 +2,7 @@
 id: tasks
 title: CLI tasks command
 sidebar_label: Tasks
-description: Mock the behaviour of application node in the Resonate Server.
+description: Interact directly with the Task Framework to mock the behaviour of Application Node.
 tags:
   - cli
   - tasks
