add tasks docs (#84)
* add tasks docs

* add capitalization changes

* change description

--- a/docs/operate/cli-reference/flags.mdx
+++ b/docs/operate/cli-reference/flags.mdx
@@ -518,3 +518,28 @@ Enables ignore-asserts mode.
 Used in:
 
 - [serve](/operate/cli-reference/commands/serve)
+
+### --counter
+
+The counter is a feature that keeps track of the number of Tasks.
+It increments each time a new Task is added and decrements when a Task is completed or removed.
+
+Used in:
+
+- [tasks](/operate/cli-reference/commands/tasks)
+
+### --process-id
+
+Unique process ID that identifies the claimant.
+
+Used in:
+
+- [tasks](/operate/cli-reference/commands/tasks)
+
+### --ttl
+
+Time to live.
+
+Used in:
+
+- [tasks](/operate/cli-reference/commands/tasks)
