Python SDK quickstart tutorial parts 2-5, refactor TypeScript quickstart tutorial, move Python tutorial code to examples repo

--- a/docs/evaluate/features/incremental-adoption.mdx
+++ b/docs/evaluate/features/incremental-adoption.mdx
@@ -18,7 +18,8 @@ It enables you to integrate Distributed Async Await into a single Application No
 
 Try Part 1 of the quickstart tutorials to see Local Mode in action:
 
-- [TypeScript SDK quickstart Part 1](/get-started/typescript-quickstart/part-1)
+- [Python-SDK quickstart - Part 1 Incremental adoption](/get-started/python-quickstart#part-1-incremental-adoption)
+- [TypeScript SDK quickstart - Part 1 Incremental adoption](/get-started/typescript-quickstart#part-1-incremental-adoption)
 
 For practical guidance on switching between Local and Remote mode, see the following feature guidance:
 
