--- a/docs/evaluate/features/sequetial-programming-model.mdx
+++ b/docs/evaluate/features/sequetial-programming-model.mdx
@@ -32,7 +32,8 @@ When you use Resonate to build applications, you can write code like the example
 
 Get started using one of the following quickstart tutorials:
 
-- [TypeScript SDK quickstart Part 1](/get-started/typescript-quickstart/part-1)
+- [Python SDK quickstart Part 1](/get-started/python-quickstart)
+- [TypeScript SDK quickstart Part 1](/get-started/typescript-quickstart)
 
 Or jump right into the feature development guides:
 
