--- a/docs/get-started/typescript-quickstart/index.mdx
+++ b/docs/get-started/typescript-quickstart/index.mdx
@@ -41,7 +41,7 @@ If any of the functions throw an error or reject a promise, Resonate will automa
 
 This tutorial assumes that you have [NodeJS](https://nodejs.org/en) and [npm](https://www.npmjs.com/) installed.
 
-## Set up the project
+## Part 1 Incremental adoption
 
 Create a project folder.
 
@@ -64,7 +64,9 @@ npm install @resonatehq/sdk express @types/express
 Create a file named **app.ts** and copy and paste the minimal distributed async/await application below:
 
 <!--SNIPSTART quickstart-ts-part-1-app-->
+
 [docs/get-started/typescript-quickstart/code/part-1/src/app.ts](https://github.com/resonatehq/docs/blob/main/docs/get-started/typescript-quickstart/code/part-1/src/app.ts)
+
 ```ts
 import { Context } from "@resonatehq/sdk";
 
@@ -115,6 +117,7 @@ async function summarize(ctx: Context, text: string): Promise<string> {
   });
 }
 ```
+
 <!--SNIPEND-->
 
 The code that makes up `app.ts` is a simple mock application that simulates downloading a page from the internet and then summarizing the content of that page.
@@ -130,7 +133,9 @@ When they return a “rejected” promise, Resonate automatically retries them u
 Next, create a file named `gateway.ts` and paste in the following express server code that uses Resonate:
 
 <!--SNIPSTART quickstart-ts-part-1-gateway-->
+
 [docs/get-started/typescript-quickstart/code/part-1/src/gateway.ts](https://github.com/resonatehq/docs/blob/main/docs/get-started/typescript-quickstart/code/part-1/src/gateway.ts)
+
 ```ts
 import express, { Request, Response } from "express";
 import { Resonate, Context } from "@resonatehq/sdk";
@@ -173,6 +178,7 @@ app.listen(3000, () => {
   console.log("Listening on port 3000");
 });
 ```
+
 <!--SNIPEND-->
 
 The `gateway.ts` file contains an Express server that listens on port 3000 and includes a single route handler that leverages Resonate to run the `downloadAndSummarize()` function.
@@ -192,8 +198,6 @@ Lastly, make sure to update your `package.json` file to include the following sc
   }
 }
 ```
-
-## Run the application
 
 To start your summarization service run `npm start`.
 
@@ -222,35 +226,38 @@ However, if you restart the service or provide a different url, the service will
 
 In the next part of the tutorial, you will connect to a Resonate Server which stores the promise remotely, so that even if your HTTP server crashes, the function executions will be able to eventually complete.
 
-## Install the Resonate Server
+## Part 2 Durable Execution
 
 Now it is time to connect your service to a Resonate Server to enable recovery from platform-level failures.
 To simulate a platform-level failure, you will kill the HTTP server process in the middle of the execution of the `downloadAndSummarize()` function.
 
-Follow the steps in the [Resonate Server install guide](/get-started/server-installation) to install and run the server on your machine.
+Follow the steps in the [Resonate Server install guide](/get-started/server-quickstart) to install and run the server on your machine.
 
 By default, the Server runs on localhost port 8001.
 
 After the server is running, you can update your service code.
-
-## Update your code
 
 There are three places where you need to update your code for this nex part of the tutorial.
 
 First, in your `gateway.ts` file, update the `new Resonate()` call and provide it with the URL of the server, in this case `http://localhost:8001`.
 
 <!--SNIPSTART quickstart-ts-part-2-server-url-->
+
 [docs/get-started/typescript-quickstart/code/part-2/src/gateway.ts](https://github.com/resonatehq/docs/blob/main/docs/get-started/typescript-quickstart/code/part-2/src/gateway.ts)
+
 ```ts
 // Initialize a Resonate application.
 const resonate = new Resonate({ url: "http://localhost:8001" });
 ```
+
 <!--SNIPEND-->
 
 Then, extend the top-level promise resolution timeout to a full minute.
 
 <!--SNIPSTART quickstart-ts-part-2-register-timeout-->
+
 [docs/get-started/typescript-quickstart/code/part-2/src/gateway.ts](https://github.com/resonatehq/docs/blob/main/docs/get-started/typescript-quickstart/code/part-2/src/gateway.ts)
+
 ```ts
 // Register a function as a Resonate function
 resonate.register(
@@ -259,6 +266,7 @@ resonate.register(
   resonate.options({ timeout: 60000 }) // set a total execution timeout of 1 minute
 );
 ```
+
 <!--SNIPEND-->
 
 You are increasing the top-level promise resolution timeout to a full minute so that you have time to kill the service and bring it back up again.
@@ -266,7 +274,9 @@ You are increasing the top-level promise resolution timeout to a full minute so 
 And finally, in your `app.ts` file add a 10 second sleep to the `downloadAndSummarize()` function between `download()` and `summarize()`.
 
 <!--SNIPSTART quickstart-ts-part-2-add-sleep-->
+
 [docs/get-started/typescript-quickstart/code/part-2/src/app.ts](https://github.com/resonatehq/docs/blob/main/docs/get-started/typescript-quickstart/code/part-2/src/app.ts)
+
 ```ts
 export async function downloadAndSummarize(ctx: Context, url: string) {
   console.log("Downloading and summarizing content from", url);
@@ -284,13 +294,12 @@ export async function downloadAndSummarize(ctx: Context, url: string) {
   return summary;
 }
 ```
+
 <!--SNIPEND-->
 
 You are adding a 10 second sleep so that you have time between the `download()` step and the `summarize()` step so that you have time to kill the service before the `summarize()` step starts.
 
 Now that you have your code updated, it is time to simulate a service outage.
-
-## Simulate a crash
 
 If you haven't already, restart your HTTP service with the updated code.
 
@@ -327,8 +336,6 @@ That is because the result of function 2 was stored in promise 2 before the proc
 This effectively resumes the execution of function 1 from where it left off.
 
 Next, you will inspect the promise in the Resonate Server to see that it resolved successfully.
-
-## Inspect promises
 
 You can inspect the promises stored in the Resonate Server via the Resonate CLI.
 
